blad w swagger.yaml
